--- a/style.css
+++ b/style.css
@@ -276,6 +276,11 @@ footer {
 }
 
 @media (max-width: 480px) {
+
+ .task-input, .tasks{
+   width: 95%;
+ }
+
   header h1 {
     font-size: 1rem;
   }
